# AURCache

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  docker-compose.dindmode.dev.yaml  docker-compose.e2e.yaml  docker-compose.hostmode.dev.yaml  docker-compose.yaml  entrypoint.sh  renovate.json
.github/: FUNDING.yml
backend/: Cargo.toml
backend/aurcache/: Cargo.toml  build.rs
backend/aurcache-activitylog/: Cargo.toml
backend/aurcache-activitylog/src/: activity_utils.rs  package_add_activity.rs  package_delete_activity.rs  package_update_activity.rs
backend/aurcache-api/: Cargo.toml
backend/aurcache-api/src/: activity.rs  aur.rs  auth.rs  backend.rs  build.rs  cusom_file_server.rs  embed.rs  health.rs  init.rs  lib.rs  package.rs  settings.rs  stats.rs
backend/aurcache-api/src/models/: aur.rs  authenticated.rs  builds.rs  input.rs  mod.rs  package.rs  settings.rs  stats.rs
backend/aurcache-builder/: Cargo.toml
backend/aurcache-builder/src/: build.rs  build_mode.rs  cancel.rs  docker.rs  env.rs  init.rs  lib.rs  logger.rs  makepkg_utils.rs  move_location.rs  path_utils.rs  queue.rs
backend/aurcache-builder/src/commands/: mod.rs
backend/aurcache-builder/src/utils/: healthy.rs  mod.rs  remove_archive_file.rs
backend/aurcache-db/: Cargo.toml
backend/aurcache-db/src/: activities.rs  builds.rs  dependencies.rs  files.rs  init.rs  lib.rs  packages.rs  prelude.rs  settings.rs
backend/aurcache-db/src/helpers/: build_enqueue.rs  dbtype.rs  mod.rs
backend/aurcache-db/src/migration/: create.rs  m20240907_131839_platform_buildflags.rs  m20250213_223900_activity_log.rs  m20251015_230000_pkg_sources.rs  m20251106_100000_build_version.rs  m20251107_000000_build_flags_no_install.rs  m20251204_160000_settings.rs  m20260508_000000_dependency_resolution_combined.rs  m20260508_000005_drop_packages_files.rs  m20260514_000000_build_enqueue_dedupe.rs  m20260516_000000_package_provides.rs  mod.rs
backend/aurcache-db/tests/: dependency_backfill.rs
backend/aurcache-deps/: Cargo.toml
backend/aurcache-deps/src/: client.rs  deps.rs  lib.rs  model.rs  repo.rs
backend/aurcache-scheduler/: Cargo.toml
backend/aurcache-scheduler/src/: aur_version_update.rs  auto_update.rs  lib.rs  mirror_ranking.rs  update_version_check.rs
backend/aurcache-types/: Cargo.toml
backend/aurcache-types/src/: builder.rs  lib.rs  settings.rs
backend/aurcache-utils/: Cargo.toml
backend/aurcache-utils/src/: lib.rs  pkg.rs  platforms.rs
backend/aurcache-utils/src/aur/: api.rs
backend/aurcache-utils/src/git/: checkout.rs  mod.rs  sourceinfo.rs
backend/aurcache-utils/src/package/: add.rs  delete.rs  enqueue.rs  live_check.rs  mod.rs  update.rs
backend/aurcache-utils/src/settings/: definitions.rs  general.rs  meta.rs  mod.rs  parser.rs  types.rs
backend/aurcache-utils/src/utils/: mod.rs  remove_archive_file.rs
backend/aurcache-utils/tests/: add.rs
backend/aurcache/src/: logger.rs  main.rs  startup.rs
backend/aurcache/src/activity_log/: mod.rs  package_add_activity.rs  package_delete_activity.rs
backend/aurcache/src/api/: aur.rs  auth.rs  backend.rs  build.rs  cusom_file_server.rs  health.rs  init.rs  package.rs
backend/aurcache/src/api/models/: input.rs  output.rs
backend/aurcache/src/aur/: api.rs
backend/aurcache/src/builder/: build.rs  build_mode.rs  cancel.rs  docker.rs  env.rs  init.rs  logger.rs  makepkg_utils.rs  mod.rs  path_utils.rs  queue.rs  types.rs
backend/aurcache/src/db/: builds.rs  files.rs  init.rs  mod.rs  packages.rs  packages_files.rs
backend/aurcache/src/db/helpers/: dbtype.rs
backend/aurcache/src/db/migration/: create.rs  m20250818_143031_custom_pkgbuild_support.rs  m20251015_230000_pkg_sources.rs  m20251106_100000_build_version.rs  mod.rs
backend/aurcache/src/package/: add.rs  custom.rs  delete.rs  mod.rs  types.rs  update.rs
backend/aurcache/src/repo/: mod.rs  platforms.rs  utils.rs
backend/aurcache/src/scheduler/: aur_version_update.rs  auto_update.rs  mirror_ranking.rs  mod.rs
backend/aurcache/src/utils/: build_mode.rs  mod.rs  startup.rs
backend/pacman-mirrors/: Cargo.toml
backend/pacman-mirrors/src/: benchmark.rs  country.rs  lib.rs  mirror.rs  platforms.rs  protocol.rs  status.rs
backend/pacman-repo-utils/: Cargo.toml
backend/pacman-repo-utils/src/: lib.rs  repo_add.rs  repo_init.rs  repo_remove.rs
backend/pacman-repo-utils/src/pkginfo/: parser.rs
backend/pacman-repo-utils/src/repo_database/: db.rs  desc.rs  mod.rs
backend/scripts/: makepkg
backend/src/: cusom_file_server.rs  main.rs
backend/src/activity_log/: activity_serializer.rs  activity_utils.rs  mod.rs  package_add_activity.rs  package_update_activity.rs
backend/src/api/: activity.rs  add.rs  aur.rs  auth.rs  backend.rs  build.rs  cusom_file_server.rs  embed.rs  health.rs  init.rs  list.rs  mod.rs  package.rs  remove.rs  stats.rs  version.rs
backend/src/api/models/: authenticated.rs  input.rs
backend/src/api/types/: authenticated.rs  input.rs  output.rs
backend/src/aur/: api.rs  aur.rs  mod.rs  pkgbuild.rs
backend/src/builder/: build.rs  builder.rs  cancel.rs  docker.rs  init.rs  logger.rs  mod.rs  queue.rs  types.rs
backend/src/db/: activities.rs  builds.rs  files.rs  init.rs  mod.rs  packages.rs  packages_files.rs  prelude.rs  status.rs  versions.rs
backend/src/db/helpers/: dbtype.rs  mod.rs
backend/src/db/migration/: create.rs  m20240907_131839_platform_buildflags.rs  m20250213_223900_activity_log.rs  mod.rs
backend/src/package/: add.rs  delete.rs  update.rs
backend/src/pacman-repo-utils/: Cargo.toml
backend/src/pacman-repo-utils/src/: lib.rs  repo_add.rs  repo_init.rs
backend/src/pacman-repo-utils/src/pkginfo/: parser.rs
backend/src/pacman-repo-utils/src/repo_database/: db.rs  desc.rs
backend/src/pkgbuild/: build.rs
backend/src/repo/: init.rs  mod.rs  repo.rs  utils.rs
backend/src/scheduler/: aur_version_update.rs  auto_update.rs  mod.rs
backend/src/utils/: db.rs  dir_size.rs  logger.rs  mod.rs  oauth_config.rs  startup.rs
docker/: Dockerfile  Dockerfile.arm64  add-aur.sh  build-rust.sh  (+3 more)
(+193 files in other folders)
