# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["pacman-mirrors", "pacman-repo-utils", "aurcache", "aurcache-builder", "aurcache-db", "aurcache-api", "aurcache-activitylog", "aurcache-utils"]

[workspace.dependencies]
tokio = "1.48.0"
anyhow = "1.0.100"
reqwest = "0.12.24"
log = "0.4.28"
chrono = "0.4.42"
serde = "1.0.228"
backon = "1.6.0"
serde_json = "1.0.145"
sea-orm = { version = "1.1.17", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-bigdecimal" ] }
itertools = "0.14.0"
aur-rs = "0.1.1"

[profile.release]
strip = "debuginfo"  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1