[workspace]
resolver = "2"
members = [
    "pacman-mirrors",
    "pacman-repo-utils",
    "aurcache",
    "aurcache-builder",
    "aurcache-db",
    "aurcache-api",
    "aurcache-activitylog",
    "aurcache-utils",
    "aurcache-scheduler"
]

[workspace.dependencies]
tokio = "1.49.0"
anyhow = "1.0.101"
reqwest = "0.13.2"
tracing = "0.1.44"
chrono = "0.4.43"
serde = "1.0.228"
backon = "1.6.0"
serde_json = "1.0.149"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-bigdecimal"] }
itertools = "0.14.0"
aur-rs = "0.1.1"
flate2 = "1.1.9"
tar = "0.4.44"
tempfile = "3.25.0"
alpm-srcinfo = "0.6.2"

[profile.release]
strip = "debuginfo"  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1
