[package]
name = "aurcache-builder"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
sea-orm = {workspace = true}
itertools = {workspace = true}
flate2 = {workspace = true}
tar = {workspace = true}
tempfile = {workspace = true}

bollard = "0.19.4"
futures = "0.3.31"
tokio-util ={version = "0.7.17", features = ["io"]}

aurcache-db = {path = "../aurcache-db"}
pacman-repo-utils = {path = "../pacman-repo-utils"}
aurcache-utils = {path = "../aurcache-utils"}