[package]
name = "aurcache-builder"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
sea-orm = {workspace = true}
itertools = {workspace = true}
flate2 = {workspace = true}
tar = {workspace = true}
tempfile = {workspace = true}

git2 = "0.20.4"
bollard = "0.20.1"
futures = "0.3.32"
tokio-util ={version = "0.7.18", features = ["io"]}

aurcache-db = {path = "../aurcache-db"}
pacman-repo-utils = {path = "../pacman-repo-utils"}