[package]
name = "aurcache-deps"
version = "0.1.0"
edition = "2024"

[dependencies]
alpm-srcinfo = { workspace = true }
alpm-types = "0.11.2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
thiserror = "2"
url = "2"
