[package]
name = "aurcache-utils"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
sea-orm = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
aur-rs = {workspace = true}
backon = {workspace = true}
tempfile = {workspace = true}
alpm-srcinfo = {workspace = true}

aurcache-db = {path = "../aurcache-db"}
aurcache-activitylog = {path = "../aurcache-activitylog"}
pacman-mirrors = {path = "../pacman-mirrors"}
aurcache-builder = {path = "../aurcache-builder"}