[package]
name = "aurcache-utils"
edition = "2024"

[dependencies]
phf = {version = "0.13.1", features = ["macros"]}
git2 = "0.20.2"

anyhow = {workspace = true}
sea-orm = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
aur-rs = {workspace = true}
backon = {workspace = true}
tempfile = {workspace = true}
alpm-srcinfo = {workspace = true}
serde = { workspace = true }

aurcache-db = {path = "../aurcache-db"}
aurcache-activitylog = {path = "../aurcache-activitylog"}
pacman-mirrors = {path = "../pacman-mirrors"}
pacman-repo-utils = {path = "../pacman-repo-utils"}
aurcache-types = {path = "../aurcache-types"}