[package]
name = "aurcache-utils"
edition = "2024"

[dependencies]
git2 = "0.20.2"

anyhow = {workspace = true}
sea-orm = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

tempfile = {workspace = true}
alpm-srcinfo = {workspace = true}
alpm-types = "0.11.2"
serde = { workspace = true }
serde_json = { workspace = true }

aurcache-db = {path = "../aurcache-db"}
aurcache-deps = {path = "../aurcache-deps"}
aurcache-activitylog = {path = "../aurcache-activitylog"}
pacman-mirrors = {path = "../pacman-mirrors"}
pacman-repo-utils = {path = "../pacman-repo-utils"}
aurcache-types = {path = "../aurcache-types"}

[dev-dependencies]
wiremock = "0.6"
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }