[package]
name = "aurcache"
version = "0.3.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
anyhow ={workspace = true}
reqwest = { workspace = true, features = ["blocking", "gzip", "json"] }
serde = {workspace = true}
chrono = {workspace = true}

pacman-repo-utils = {path = "../pacman-repo-utils"}
pacman-mirrors = {path = "../pacman-mirrors"}

aur-rs = "0.1.1"
rocket = "0.5.1"
rocket_oauth2 = "0.5.0"
utoipa = { version = "5.3.1", features = ["rocket_extras"] }
utoipa-redoc = { version = "6.0.0", features = ["rocket"] }
utoipa-scalar = { version = "0.3.0", features = ["rocket"] }

dotenvy = "0.15.7"
sea-orm = { version = "1.1.10", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-bigdecimal" ] }
sea-orm-migration = {version = "1.1.10", features = ["sqlx-sqlite", "runtime-tokio-rustls"]}
rust-embed = "8.7.1"
bollard = "0.19.0-rc1"
bigdecimal = "0.4.8"
env_logger = "0.11.8"
log = {workspace = true}
backon = "1.5.0"
itertools = "0.14.0"
cron = "0.15.0"
serde_json = "1.0.140"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "*", features = ["vendored"] }

[[bin]]
name = "aurcache"
path = "src/main.rs"

[features]
default = []
static = []