[package]
name = "aurcache"
version = "0.3.6"
edition = "2024"

[dependencies]
tokio = {workspace = true}
anyhow ={workspace = true}
sea-orm = {workspace = true}
log = {workspace = true}

pacman-repo-utils = {path = "../pacman-repo-utils"}
pacman-mirrors = {path = "../pacman-mirrors"}
aurcache-builder = {path = "../aurcache-builder"}
aurcache-db = {path = "../aurcache-db"}
aurcache-api = { path = "../aurcache-api" }
aurcache-scheduler = {path = "../aurcache-scheduler"}

dotenvy = "0.15.7"
env_logger = "0.11.8"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "*", features = ["vendored"] }

[[bin]]
name = "aurcache"
path = "src/main.rs"

[features]
static = ["aurcache-api/static"]