[package]
name = "pacman-repo-utils"
description = "Plug in replacement for repo-add pacman tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
log = {workspace = true}

base64 = "0.22.1"
md5 = "0.7.0"
sha2 = "0.10.8"
flate2 = "1.0.34"
xz2 = "0.1.7"
zstd = "0.13.2"
tar = "0.4.42"
