[package]
name = "pacman-repo-utils"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
tracing = {workspace = true}
flate2 = {workspace = true}
tar = {workspace = true}
alpm-srcinfo = {workspace = true}

alpm-pkginfo =  { git = "https://github.com/archlinux/alpm.git" }
alpm-db = { git = "https://github.com/archlinux/alpm.git" }

base64 = "0.22.1"
md5 = "0.8.0"
sha2 = "0.10.9"
xz2 = "0.1.7"
zstd = "0.13.3"
