[package]
name = "pacman-repo-utils"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
tracing = {workspace = true}
flate2 = {workspace = true}
tar = {workspace = true}

base64 = "0.22.1"
liblzma = { version = "0.4.1", features = ["parallel"] }
md5 = "0.8.0"
sha2 = "0.11.0"
zstd = "0.13.3"
